Atualizar o style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,6 +490,10 @@ ul {
     .bg-main {
         background-image: url(/assets/img/mobile-gif-mario.gif);
     }
+    
+    .section-main, .intro{
+        min-height: auto;
+    }
 }
 
 
