--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,6 +489,8 @@ ul {
     
     .bg-main {
         background-image: url(/assets/img/mobile-gif-mario.gif);
+        background-position: top top;
+        /* background-size: contain; */
     }
     
     .section-main, .intro{
