--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,7 +489,7 @@ ul {
     
     .bg-main {
         background-image: url(/assets/img/mobile-gif-mario.gif);
-        background-position: top top;
+        background-position: top center;
         background-size: contain;
     }
 }
