--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,7 +490,7 @@ ul {
     .bg-main {
         background-image: url(/assets/img/mobile-gif-mario.gif);
         background-position: top center;
-        background-size: contain;
+        /* background-size: contain; */
     }
 }
 
