--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,8 +489,8 @@ ul {
     
     .bg-main {
         background-image: url(/assets/img/mobile-gif-mario.gif);
-        background-position: top center;
-        /* background-size: contain; */
+        background-position: center center;
+        background-size: contain;
     }
 }
 
