--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -470,6 +470,11 @@ ul {
 
 
 @media (max-width: 800px) {
+    
+    .intro h1{
+        font-size: 3.3rem;
+    }
+    
     .intro-links ul {
         flex-direction: column;
 
