--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,18 @@ ul {
     }
 }
 
+@keyframes lineAnimation {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+        left: 0;
+
+    }
+}
+
 .section-main {
     min-height: 100vh;
     padding: 1rem;
@@ -247,22 +259,6 @@ ul {
     height: 0.1rem;
     animation: lineAnimation 1s linear both;
 }
-
-@keyframes lineAnimation {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 100%;
-        left: 0;
-
-    }
-}
-
-
-
-
 
 .menu-content {
     display: flex;
@@ -490,12 +486,6 @@ ul {
     padding: 1rem;
 }
 
-/* .card {
-    height: 100%;
-    padding: 1rem;
-    justify-content: space-between;
-} */
-
 .grid-content:hover {
     transition: var(--transition);
     transform: translateY(-2rem);
@@ -503,8 +493,6 @@ ul {
     border-radius: 1rem;
     height: 100%;
 }
-
-
 
 /*                       PROJECTS                         */
 
@@ -583,8 +571,6 @@ ul {
     transform: translateY(-2%);
     box-shadow: 0 0 5px var(--s-color);
 }
-
-
 
 .card-project a:hover {
     transition: var(--transition);
@@ -691,6 +677,18 @@ ul {
 
 @media (max-width: 800px) {
 
+    @keyframes desprenderAnimation {
+        from {
+
+            width: 0;
+        }
+
+        to {
+
+            width: 100vw;
+        }
+    }
+
     .intro h1 {
         font-size: 3.3rem;
     }
@@ -729,16 +727,14 @@ ul {
     }
 
     .menu {
-        height: 50vh;
-        width: 0;
-        background-color: var(--p-color);
+        height: 60vh;
+        width: 100vw;
     }
 
+
     .menu-content {
-        animation: menuEntrada 2s;
-        background-color: var(--p-color);
-        width: 100vw;
-        justify-content: center;
+        animation: desprenderAnimation 0.3s both;
+        position: fixed;
 
     }
 
