--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,7 @@ ul {
     }
 
     to {
-        width: 100vw;
+        width: 100%;
     }
 }
 
@@ -696,13 +696,15 @@ ul {
 
     @keyframes desprenderAnimation {
         from {
-            width: 100vw;
+            width: 100%;
             height: 0;
+            opacity: 0;
         }
 
         to {
-            width: 100vw;
+            width: 100%;
             height: 60vh;
+            opacity: 1;
         }
     }
 
@@ -745,7 +747,7 @@ ul {
 
     .menu {
         height: 60vh;
-        width: 100vw;
+        width: 100%;
     }
 
     .desprender {
@@ -757,9 +759,7 @@ ul {
     }
 
     .menu-content {
-        animation: desprenderAnimation 0.3s both;
-
-
+        animation: desprenderAnimation 1.4s both;
     }
 
     .menu-content ul {
@@ -787,7 +787,7 @@ ul {
         background-color: var(--primary-color);
         color: var(--s-color);
         text-align: center;
-        font-size: 2rem;
+        font-size: 3rem;
         cursor: pointer;
         z-index: 200;
         display: flex;
@@ -795,14 +795,8 @@ ul {
         justify-content: center;
     }
 
-    .close-menu:checked~.close-menu-label:hover::after {
-        border: 1px solid var(--s-color);
-        border-radius: 10rem;
-    }
-
     .close-menu:checked~.menu {
         display: block;
-
     }
 
     .close-menu:checked~.close-menu-label::after {
