--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -765,13 +765,13 @@ ul {
         from {
 
             height: 0;
-            opacity: 0;
+            /* opacity: 0; */
         }
 
         to {
 
             height: 35rem;
-            opacity: 1;
+            /* opacity: 1; */
 
         }
     }
